--- a/BlazorLeafletMap/BlazorLeafletMap.csproj
+++ b/BlazorLeafletMap/BlazorLeafletMap.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorComponentUtilities" Version="1.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.5" />
   </ItemGroup>
 
@@ -37,7 +38,7 @@
           <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         </PropertyGroup>
      -->
-    <Exec Command="npm ci"      Condition="'$(RestorePackagesWithLockFile)' == 'true'" />
+    <Exec Command="npm ci" Condition="'$(RestorePackagesWithLockFile)' == 'true'" />
     <Exec Command="npm install" Condition="'$(RestorePackagesWithLockFile)' != 'true'" />
 
     <!-- Write the stamp file, so incremental builds work -->
